--- a/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
@@ -66,6 +66,18 @@
 				@Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Patreon")
 			</div>
 		</div>
+
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Patreon")
+			</div>
+
+			<hr />
+
+			<div>
+				@Herramientas.Idiomas.BuscarTexto(idioma, "String11", "Patreon")
+			</div>
+		</div>
 	</div>
 
 	@if (noticias.Count > 0)
